# GigaCode

./: .gitignore  .pre-commit-config.yaml  =1.1.0  AI_improvements_v5.md  CHANGELOG.md  README.md  benchmark.py  conftest.py  example.py  example_gigacode_edited.py  gigacode.toml.example  plan.md  pyproject.toml  requirements.txt  sitecustomize.py  test_audit.jsonl  tools.md
.git_checkpoint/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git_checkpoint/info/: refs
.git_checkpoint/logs/refs/heads/: main
.git_checkpoint/logs/refs/remotes/origin/: main
.git_checkpoint/objects/info/: commit-graph  packs
.git_checkpoint/objects/pack/: pack-34ba48909a8489a0e8be84717ec42b169b025c22.idx  pack-34ba48909a8489a0e8be84717ec42b169b025c22.pack  pack-34ba48909a8489a0e8be84717ec42b169b025c22.rev
.git_checkpoint/refs/remotes/origin/: main
.github/workflows/: ci.yml  release.yml
docs/: Makefile  README.md  api_reference.rst  architecture.rst  conf.py  installation.rst  quick_start.rst
docs/_build/doctrees/: api_reference.doctree  architecture.doctree  contributing.doctree  index.doctree  installation.doctree  performance_tuning.doctree  quick_start.doctree
docs/_build/doctrees/api/: buffer_manager.doctree  faiss_optimizer.doctree  incremental_indexer.doctree  index_manager.doctree  managers.doctree  search_service.doctree  semantic_cache.doctree  services.doctree  tools.doctree
docs/_build/doctrees/tutorials/: basic_embed.doctree  edit_workflows.doctree  search_workflows.doctree
docs/_build/html/: .buildinfo  api_reference.html  architecture.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  performance_tuning.html  py-modindex.html  quick_start.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/gigacode/: buffer_manager.html  faiss_optimizer.html  gigacode_tool.html  incremental_indexer.html  index_manager.html  search_service.html  semantic_cache.html
docs/_build/html/_sources/: contributing.rst.txt  index.rst.txt  installation.rst.txt  performance_tuning.rst.txt
docs/_build/html/_sources/api/: incremental_indexer.rst.txt  index_manager.rst.txt  search_service.rst.txt  services.rst.txt  tools.rst.txt
docs/_build/html/_sources/tutorials/: edit_workflows.rst.txt  search_workflows.rst.txt
docs/_build/html/api/: buffer_manager.html  faiss_optimizer.html  incremental_indexer.html  index_manager.html  managers.html  search_service.html  semantic_cache.html  services.html  tools.html
docs/_build/html/tutorials/: basic_embed.html  edit_workflows.html  search_workflows.html
docs/api/: buffer_manager.rst  faiss_optimizer.rst  managers.rst  semantic_cache.rst
docs/tutorials/: basic_embed.rst
examplecode/: data_processing.py  file_parser.py  math_utils.py  search_algorithms.py  sorting_algorithms.py  string_utils.py  utils.py
examplecode/ml/: feature_extraction.py  model_utils.py
gigacode/: __init__.py  access_control.py  agent_profile.py  audit_logger.py  batch_embedder.py  buffer_manager.py  buffer_state.py  chunker.py  cleanup_utils.py  code_quality.py  conflict_predictor.py  constants.py  context_assembler.py  context_packer.py  context_summarizer.py  conversation_memory.py  cross_language_rules.py  dead_code_detector.py  dependency_graph.py  diff_aware_search.py  diff_engine.py  duplicate_detector.py  embedder.py  embedder_optimizer.py  exceptions.py  execution_paths.py  execution_sandbox.py  faceted_search.py  faiss_optimizer.py  file_watcher.py  gigacode_api.py  gigacode_server.py  gigacode_skill.py  gigacode_tool.py  git_utils.py  gpu_index.py  health_status.py  hybrid_search.py  impact_analyzer.py  incremental_indexer.py  (+45 more)
scripts/: check_gpu.py  profile_performance.py  streaming_integration_guide.py
shaders/: __init__.py  cluster_regions.comp  compile_shaders.py  similarity_search.comp
src/: agent_skill.py  agent_tool.py  buffer_manager.py  chunker.py  cross_language_rules.py  diff_engine.py  duplicate_detector.py  embedder.py  file_watcher.py  flatten.py  gigacode_api.py  gigacode_server.py  gigacode_skill.py  gigacode_tool.py  gpu_index.py  language_detect.py  lexical_index.py  mcp_server.py  metadata_store.py  query_cache.py  tokenizer.py  tool_schema.py  vulkan_context.py
tests/: benchmark_phase3_performance.py  benchmark_speedup_performance.py  conftest.py  test_access_control_audit_rate_limit.py  test_agent_tool.py  test_batch_streaming_optimization.py  test_buffer_manager.py  test_buffer_rw.py  test_buffer_state_integration.py  test_buffer_state_machine.py  test_cet_integration.py  test_context_packer.py  test_cross_language_rules.py  test_diff_engine.py  test_duplicate_detector.py  test_faiss_optimizer.py  test_file_watcher.py  test_flatten.py  test_gpu_id_integration.py  test_grammar.py  test_grammar_detailed.py  test_hybrid_search.py  test_incremental_indexing_semantic_cache.py  test_index_manager.py  test_integration.py  test_issue_6_integration.py  test_json_logging.py  test_language_detect.py  test_lexical_index.py  test_manager_delegation.py  test_metadata_store.py  test_metrics_exporter.py  test_missing_chunk_types.py  test_optimization_module_integration.py  test_query_cache_semantic.py  test_retry_and_cleanup.py  test_search_operations_delegation.py  test_search_service.py  test_search_service_delegation.py  test_size_guard.py  (+9 more)
